syntax = "proto3";
option go_package = "github.com/summa-tx/relays/proto";

package relayproto;

import "msgs.proto";

service MsgServer {
  rpc IngestHeaderChain(MsgIngestHeaderChain) returns (string) {}
  rpc IngestDifficultyChange(MsgIngestDifficultyChange) returns (string) {}
  rpc MarkNewHeaviest(MsgMarkNewHeaviest) returns (string) {}
  rpc NewRequest(MsgNewRequest) returns (string) {}
  rpc ProvideProof(MsgProvideProof) returns (string) {}
}
